--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,8 @@
 <!-- src/app/components/header/header.component.html -->
 <header class="header">
   <img class="logo" src="assets\HKS_Logo.webp" alt="hks-logo" (click)="navigateToPage('/home')">
-  <h1>Hrvatski Košarkaški Savez</h1>
+  <h1 class="title-full">Hrvatski Košarkaški Savez</h1>
+    <h1 class="title-short">HKS</h1>
   <div class="user-info">
     <div class="header-buttons">
       
