--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -12,7 +12,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1001; // Higher than sidebar
+  z-index: 1006; // Higher than sidebar
   
   // Account for sidebar width
   // padding-left: calc(250px + 2rem); // 250px sidebar + 2rem padding
@@ -23,6 +23,21 @@
       height: 60px;
     border-radius: 50px;
 }
+
+.title-full {
+  flex: auto;
+  margin-left: 2rem;
+  display: block; // Show on desktop
+}
+
+.title-short {
+  flex: auto;
+  margin-left: 2rem;
+  display: none; // Hide on desktop
+  font-weight: 600;
+  font-size: 1.8rem;
+}
+
 
 h1{
       flex: auto;
@@ -278,7 +293,17 @@ h1{
 
   .header {
     padding-left: 2rem;
-    z-index: 1002; // Even higher on mobile to stay above mobile sidebar
+    z-index: 1090; // Even higher on mobile to stay above mobile sidebar
+  }
+
+  // Hide full title, show short title
+  .title-full {
+    display: none;
+  }
+
+  .title-short {
+    display: block;
+
   }
 
   .notification-menu {
