--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -9,12 +9,12 @@
   display: flex;
   min-height: 100vh;
   margin-left: 250px;
-  margin-top: 60px;
+  margin-top: 92px;
 }
 
 .content {
   flex: 1;
-  padding: 2rem;
+  padding: 0 2rem 1rem;
   min-height: calc(100vh - 60px);
   width: 100%;
 }
