--- a/src/app/components/basket-rules/basket-rules.component.html
+++ b/src/app/components/basket-rules/basket-rules.component.html
@@ -10,11 +10,7 @@
       <div class="library-header">
         <h1 class="library-title">Dokumenti</h1>
         <p class="library-description">
-          Među dokumentacijom se nalaze službeni pravilnici, preporuke i upute za suce i službenike
-          košarkaških utakmica u Hrvatskoj. Ova zbirka uključuje najnovije priručnike FIBA,
-          službena pravila košarke, tumačenja i tehničke vodiče za podršku
-          profesionalnom razvoju i osiguravanje dosljednih standarda za igranje
-          igara na svim razinama natjecanja.
+          Među dokumentacijom se nalaze službeni pravilnici, preporuke i upute za suce i službenike košarkaških utakmica u Hrvatskoj. Ova zbirka uključuje najnovije priručnike FIBA, službena pravila košarke, tumačenja i tehničke vodiče za podršku profesionalnom razvoju i osiguravanje dosljednih standarda za igranje igara na svim razinama natjecanja.
         </p>
       </div>
 
