--- a/src/app/components/games-assigned/edit-game-modal/edit-game-modal.component.html
+++ b/src/app/components/games-assigned/edit-game-modal/edit-game-modal.component.html
@@ -295,7 +295,7 @@
             (click)="updateGame()" 
             [disabled]="isLoading || isLoadingReferees || isLoadingAbsences">
             <span *ngIf="!isLoading">
-              <i class="fas fa-save"></i> Spremi Promjene
+              Spremi
             </span>
             <span *ngIf="isLoading">
               <i class="fas fa-spinner fa-spin"></i> Spremanje...
