--- a/src/app/components/take-exam/take-exam.component.scss
+++ b/src/app/components/take-exam/take-exam.component.scss
@@ -8,9 +8,8 @@
 
 .exam-container {
   max-width: 1200px;
-  margin: 0 auto;
   padding: 2rem;
-      margin-top: 5rem;
+  margin-top: 92px;
 }
 
 .exam-header {
@@ -460,7 +459,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  z-index: 1091;
 }
 
 .confirm-dialog {
