--- a/src/app/components/time-absent/delete-time-absent-modal/delete-time-absent-modal.component.scss
+++ b/src/app/components/time-absent/delete-time-absent-modal/delete-time-absent-modal.component.scss
@@ -80,7 +80,7 @@
 
 .btn {
   padding: 0.75rem 1.5rem;
-  margin: 0 0.5rem;
+  margin: 0.2rem 0.5rem;
   height: 3rem;
   width: 7rem;
   border: none;
