--- a/src/app/components/expense-report-details/expense-report-details.component.scss
+++ b/src/app/components/expense-report-details/expense-report-details.component.scss
@@ -12,13 +12,12 @@
     
     // Account for both fixed header and sidebar
     margin-left: 250px;
-    margin-top: 60px; // Add margin for fixed header (adjust to your header height)
+    margin-top: 92px; // Add margin for fixed header (adjust to your header height)
 }
 
 .content {
     flex: 1;
-padding: 3rem 2rem 2rem;
-    min-height: calc(100vh - 60px); // Subtract header height
+padding: 1rem 2rem;
     width: 100%;
 }
 
@@ -27,12 +26,11 @@ padding: 3rem 2rem 2rem;
   .main-layout {
     flex-direction: column;
     margin-left: 0;
-    margin-top: 120px; // Header + mobile sidebar height
+    margin-top: 125px; // Header + mobile sidebar height
   }
   
   .content {
     padding: 1rem;
-    min-height: calc(100vh - 120px);
   }
 }
 
