--- a/src/app/components/expenses/expenses.component.scss
+++ b/src/app/components/expenses/expenses.component.scss
@@ -587,6 +587,7 @@
   .page-header {
     flex-direction: column;
     align-items: flex-start;
+    text-align: center;
     gap: 1rem;
 
     h1 {
@@ -596,7 +597,8 @@
 
     .page-actions {
       align-self: stretch;
-      
+              justify-content: center;
+
       .btn-create {
         width: 60%;
         justify-content: center;
