--- a/src/app/components/time-absent/time-absent.component.scss
+++ b/src/app/components/time-absent/time-absent.component.scss
@@ -636,6 +636,7 @@
   .page-header {
     flex-direction: column;
     align-items: flex-start;
+    text-align: center;
     gap: 1rem;
 
     h1 {
@@ -645,7 +646,8 @@
 
     .page-actions {
       align-self: stretch;
-      
+              justify-content: center;
+
       .btn-create {
         width: 60%;
         justify-content: center;
